# asciirast

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  LICENSE  README.md  ascii-engine  compile_flags.txt  doxyfile  load_examples.py  main.py  makefile  readme.md  requirements.txt
acrast/: canvas.c  canvas.h
adapters/terminal/: just_fix_windows_console.cpp  main.cpp
asciirast/: CMakeLists.txt  canvas.c  canvas.h  clip.h  clip_line_cohen_sutherland.c  color.c  color_encoding.c  color_encoding.h  constants.h  draw.h  draw_line.c  draw_line.md  draw_point.c  fragment.h  framebuffer.h  math.h  program.h  program_token.h  rasterize.h  renderer.cpp  renderer.h  renderer_options.h  sampler.h  texture.h  utils.h  varying.h
asciirast/color/: color.cpp  color.h
asciirast/detail/: StaticPoolGenerator.h  assert.h  has_minus_operator.h  rasterize.h
asciirast/math/: AABB.h  Angle.h  Complex.h  Float.h  Mat.h  Rot.h  Swizzled.h  Transform.cpp  Transform.h  Vec.h  VecBase.h  algorithms.h  non_narrowing.h  transform.h  types.h  utils.h  why-matrices.md
asciirast/math/math/: Mat.h  Transform.h  Vec.h  VecBase.h  VecLike.h
asciirast/math/types/: Mat.h  RGBABase.h  Rot.h  Swizzled.h  Transform.h  Transfrom.cpp  Vec.h  VecBase.h  VecLike.h
asciirast/rasterize/: bounds_test.h  clip.h  clip_line.h  cull.h  cull_and_clip.h  cull_point.h  frustum_test.h  generate.h  generate_attrs.h  generate_depth.h  generate_line.h  interpolate.h  lerp.h  plot.h  rasterizate.h  rasterize.h
asciirast/renderer/: draw_line.h  draw_point.h  draw_triangle.h  interpolate.h  rasterize.h  test_bounds.h
asciirast/utils/: ChangeDetected.h
asciirast3d/: main.cpp  vec.hpp
cmake/: CPM-SDL.cmake
example_scenes/: cube_scene.c  cube_scene.h  diamond_triangle_scene.c  diamond_triangle_scene.h  example_scenes.h  main.c  rgb_triangle_scene.c  rgb_triangle_scene.h  rotating_triangle_scene.c  rotating_triangle_scene.h  spiral_scene.c  spiral_scene.h  star_scene.c  star_scene.h  wavy_triangle_scene.c  wavy_triangle_scene.h
examples/: donut.py  spiral.py  star.py  star_music_visualizer.py
examples/00-minimal/: CMakeLists.txt  main.cpp
examples/00-spiral/: CMakeLists.txt  main.cpp
examples/01-sierpinski-triangle/: CMakeLists.txt  main.cpp
examples/02-star/: main.cpp
examples/02-wheel/: CMakeLists.txt  ctables.hpp  main.cpp
examples/04-fractal-tree/: todo
examples/IMG-00-perspective-correctness/: CMakeLists.txt  main.cpp
examples/IMG-01-mipmapping/: CMakeLists.txt  main.cpp
examples/IMG-02-sampling/: CMakeLists.txt  main.cpp
examples/PPM-00-perspective-correctness/: CMakeLists.txt  main.cpp
examples/SDL-00-hello-triangle/: CMakeLists.txt  main.cpp
examples/SDL-01-wireframe/: CMakeLists.txt  main.cpp
examples/SDL-02-flat-shading/: CMakeLists.txt  main.cpp
examples/SDL-03-shading-with-depth/: CMakeLists.txt  main.cpp
examples/SDL-04-texture-sampling/: CMakeLists.txt  main.cpp
examples/SDL-05-shading-with-color/: CMakeLists.txt  main.cpp
examples/common/: CMakeLists.txt  EasyFont.hpp  PPMBuffer.h  PPMBuffer.hpp  SDLBuffer.h  SDLBuffer.hpp  SDLClock.h  TerminalBuffer.h  TerminalBuffer.hpp  get_terminal_size.cpp  just_fix_windows_console.cpp  terminal_utils.h
include/: CMakeLists.txt  asciirast.hpp
include/asciirast/: fragment.hpp  framebuffer.hpp  misc.hpp  program.hpp  program_token.hpp  renderer.hpp  renderer_options.hpp  sampler.hpp  texture.hpp  utils.hpp  varying.hpp
include/asciirast/detail/: GeneratorInterface.hpp  StaticPoolGenerator.hpp  assert.hpp
include/asciirast/math/: AABB.hpp  Float.hpp  Mat.hpp  Rot.hpp  Swizzled.hpp  Transform.hpp  Vec.hpp  VecBase.hpp  types.hpp
include/asciirast/renderer/: rasterize.hpp  test_bounds.hpp
include/math/: types.h  vec_base.h
lib/: CMakeLists.txt
lib/ctl/: README.md  ctl.h  set.h  str.h  vec.h
lib/math/: Mat.h  Mat.md  MatBase.h  Swizzled.h  Vec.h  VecBase.h  swizzle.cpp  swizzle.h  vec_data.h
lib/math/utils/: non_narrowing_conv.h
py_acrast/: _external.py
py_acrast/canvas/: __init__.py  canvas.py
py_acrast/color/: __init__.py  rgbcolor.py
py_asciirast/: __init__.py  _external.py  canvas.py  color_encoding.py  draw.py  external.py  printutils.py
py_asciirast/canvas/: __init__.py  canvas.py
py_asciirast/color/: __init__.py  rgbcolor.py
rasterizer_api/: _external.py
rasterizer_api/canvas/: __init__.py  canvas.py
rasterizer_api/color/: __init__.py  rgbcolor.py
rasterizer_c/: color.c  color.h
src/: CMakeLists.txt  ascii_palettes.h  collison.h  color.h  draw.c  draw.h  draw3d.h  draw_clip.h  draw_clipping.h  draw_plot.h  draw_vertix_prop.h  engine.c  engine.h  engine_cmd_desc.h  engine_cmd_ht.h  engine_commands_view.h  engine_sdl_window.c  engine_sdl_window.h  engine_timer.c  engine_timer.h  external.h  framebuf.h  key.c  key.h  log.h  main.c  misc.c  misc.h  renderer.h  scene.h  screen.c  screen.h  stack.h  texture.cpp  transform.c  transform.h
src/data_structures/: hashtable.h  is_pow2.h  murmurhash.h  stack.h
src/engine/: engine_sdl_window.c  engine_sdl_window.h  engine_timer.c  engine_timer.h
src/math/: Vec.cpp  angle.h  f32.h  f32_to_i32.h  float.h  i32.h  i32_to_f32.h  int.h  internal_vec.h  internal_vecint.h  internal_vecint_vec.h  macros.h  mat4x4.h  mat4x4_quat.h  mat4x4_to_quat.h  quat.h  quat_mat4x4.h  quat_to_mat4x4.h  types.cpp  utils.cpp  vec.h  vec_deprecated.h  vec_internal.h
src/objects/: object.h  spiral.c  spiral.h  star.c  star.h
src/rasterizer/: ascii_table_type.h  color.h  draw.c  draw.h  draw_clip_2d.h  draw_plot.h  draw_propi.h  draw_valid_prop.h  renderer.c  renderer.h  renderer_type.h  screen.c  screen.h
src/rasterizer/draw/: draw_clip.h  draw_plot.h  (+2 more)
src/scenes/: ascii_palettes.h  cube_scene.c  cube_scene.h  diamond_triangle_scene.c  diamond_triangle_scene.h  rotating_triangle_scene.c  rotating_triangle_scene.h  scene.h  scene_type.h  spiral.c  spiral.h  spiral_scene.c  spiral_scene.h  star.c  star.h  star_scene.c  star_scene.h  triangle_scene.c  triangle_scene.h  wavy_triangle_scene.c  wavy_triangle_scene.h
src/terminal-app/: CMakeLists.txt  main.cpp  utils.h
